# EE312proj6_GoFish

./: CMakeLists.txt  card.cpp  card_demo.cpp  deck.cpp  player.cpp
